--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,16 +12,12 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     shiny (>= 1.5.0),
-    shinyjs,
     colourpicker,
     DT,
     plyr,
-    reshape2,
     igraph,
     ggraph,
     ggplot2,
     purrr,
-    tibble,
     dplyr,
-    tidyr,
-    stringr
+    tidyr
